공공데이터 오류 변경